--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ rich = "^13.7.1"
 drf-nested-routers = "^0.93.5"
 uvicorn = "^0.29.0"
 gunicorn = "^21.2.0"
+aws-lambda-powertools = "^2.36.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -49,4 +50,4 @@ makemigrations = "python manage.py makemigrations"
 migrate = "python manage.py migrate"
 flightcheck = "python manage.py check --deploy"
 run = "python -m gunicorn chat.asgi:application -k uvicorn.workers.UvicornWorker"
-
+aws-sso = "aws sso login --profile sandbox-sso"
