--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ uvicorn = "^0.29.0"
 gunicorn = "^21.2.0"
 aws-lambda-powertools = "^2.36.0"
 momento = "^1.20.1"
+django-ses = {extras = ["events"], version = "^3.5.2"}
 
 
 [tool.poetry.group.dev.dependencies]
