adds health check endpoint

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "django-chatbot-playground",
   "type": "module",
+  "workspaces": [
+    "stacks/*"
+  ],
   "devDependencies": {
     "@types/bun": "latest"
   },
